--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/mocha": "9.1.0",
     "@types/node": "16.11.7",
     "@types/sinon": "10.0.11",
+    "@types/sinon-chai": "^3.2.9",
     "@types/supertest": "2.0.11",
     "@typescript-eslint/eslint-plugin": "5.3.1",
     "@typescript-eslint/parser": "5.3.1",
@@ -35,6 +36,7 @@
     "mocha": "9.2.1",
     "nyc": "15.1.0",
     "sinon": "13.0.1",
+    "sinon-chai": "^3.7.0",
     "supertest": "6.2.2",
     "ts-jest": "27.1.3",
     "ts-node": "10.4.0",
